<resources>
    <string name="app_name">Trendize</string>
    <string name="app_slogan">Buy All Products at Wholesale Rate in Sahiwal</string>
    <string name="loan">Loan</string>
    <string name="sell">Sell</string>
    <string name="dummy_price">Rs. 100</string>
    <string name="send_to">Share App to Your Friends</string>
    <string name="footer_text"><link>Exchange It To Cash</link> </string>
    <string name="welcome">Welcome</string>
    <string name="login">Sign In</string>
    <string name="sing_in">LOGIN</string>
    <string name="register">SIGN UP</string>
    <string name="create_now">Create Now"</string>
    <string name="email">Email</string>
    <string name="dummy_email">jamil.57@hotmail.com</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="sing_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_account_question">Don’t Have An Account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact">Contact Number</string>
    <string name="update_profile_user">Update Profile</string>
    <string name="update_profile_image">Change Picture</string>
    <string name="dummy_contact">+92 300 1234567</string>
    <string name="address">Address</string>
    <string name="dummy_address">House No 87 R Block 57000, Punjab, Pakistan</string>
    <string name="welcome_back">Hello Again!\nWelcome\nBack</string>
    <string name="already_member">Already have an Account?</string>
    <string name="toolbar_get_loan">Get Loan</string>
    <string name="toolbar_add_loan_product">Add Product For Loan</string>
    <string name="toolbar_sell_item">Sell an Item</string>
    <string name="toolbar_my_complains">My Complains</string>
    <string name="toolbar_complain_details">Complain Details</string>
    <string name="toolbar_sell_product">Sell Product</string>
    <string name="toolbar_items_list">My Item List</string>
    <string name="toolbar_items_list_details">Item Details</string>
    <string name="toolbar_my_profile">My Profile</string>
    <string name="toolbar_update_profile">Update Profile</string>
    <string name="toolbar_update_profile_image">Update Profile Image</string>
    <string name="upload_picture">Upload New Profile Picture</string>
    <string name="required_loan_amount_text">Asking Amount</string>
    <string name="product_year_text">Manufacturing Year</string>
    <string name="terms_and_conditions_label">I accept Terms &amp; Conditions</string>
    <string name="terms_and_conditions">Product Terms</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--Complain Strings-->
    <string name="complain_toolbar">Submit Complain </string>
    <string name="complain_header">Product Complain</string>
    <string name="post_product">Submit Product</string>
    <string name="product_header_product_details">Product Details</string>
    <string name="product_image_header">Product Images</string>
    <string name="product_image_text">Please upload all required six images.</string>
    <string name="text_product_header">Provide the accurate details of the product here.</string>
    <string name="text_complain_header">Provide Details Of Product and Complain Details</string>
    <string name="complain_button">Submit</string>
    <string name="button_update_profile">Update</string>
    <string name="complain_item_type">Item Type</string>
    <string name="complain_item_serial_or_imei">Serial or IMEI Number</string>
    <string name="complain_item_manufacturing_year">Manufacturing Year</string>
    <string name="complain_contact_number">Contact Number</string>
    <string name="complain_product_detail">Product Model</string>
    <string name="complain_complain_detail">Complain Details</string>
    <string name="complain_date">Complain Date</string>
    <string name="complain_status">Complain Status</string>
    <string name="product_status">Product Status</string>
    <string name="complain_product_name">Dell Laptop</string>
    <string name="complain_product_name_label">Product Name</string>
    <string name="complain_reference">Complain #</string>
    <string name="complain_more_info">More Details</string>
    <string name="product_price">$400</string>
    <string name="complain_dummy_message">Dummy message Dummy message Dummy message Dummy message Dummy message Dummy message Dummy message Dummy message Dummy message Dummy message</string>
    <string name="lorem_ipsm_large">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the </string>
    <!--Home Fragment Menus-->
    <string name="fragment_home_loan_or_product">Loan / Sell Product</string>
    <string name="fragment_home_track_my_items">\nTrack My Items</string>
    <string name="fragment_home_product_lost_complain">Product Lost Complain</string>
    <string name="fragment_home_user_profile">\nProfile</string>
    <string name="fragment_home_complain_list">Complain List</string>
    <string name="fragment_home_logout_user">Logout</string>
    <!--Navigation Drawer Strings Start-->
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Navigation Drawer Strings End-->

    <string-array name="item_condition">
        <item>Select Condition</item>
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string-array name="item_types">
        <item>Select Product</item>
        <item>MacBook Pro</item>
        <item>MacBook Air</item>
        <item>iMac</item>
        <item>iPhone</item>
        <item>iPad</item>
        <item>Apple Inc Accessories</item>
        <item>Android Phone</item>
        <item>Windows Laptop</item>
        <item>Android Accessories</item>
        <item>Tablet</item>
        <item>Play Station</item>
        <item>Xbox</item>
        <item>Other</item>
    </string-array>
</resources>