<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Welcome">
    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="90dp"

        android:src="@drawable/logo_blue"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_regular"
        android:text="@string/welcome_back"
         />
    <Button
        android:id="@+id/btn_welcome_login"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/sing_in"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_btn_stroke"
        android:padding="10dp"/>
    <Button
        android:id="@+id/btn_welcome_register"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/register"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_btn_stroke"
        android:padding="10dp"/>

</LinearLayout>