<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_user_complain"
    android:layout_margin="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:cardCornerRadius="5dp"
    tools:viewBindingIgnore="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_complain_list_item_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/complain_product_name"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_bold"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:id="@+id/tv_complain_list_complain_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complain_dummy_message"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_regular"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <Button
            android:id="@+id/btn_complain_list_more_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/sf_regular"
            android:textAllCaps="false"
            android:text="@string/complain_more_info"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>