<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.AddComplain">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_product_details"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_btn_back"
                android:text="@string/complain_toolbar"
                android:textStyle="bold"
                android:fontFamily="@font/sf_regular"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_btn_back"
                android:layout_width="25dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_back_button"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="20dp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_customer_complain_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/sf_bold"
                android:text="@string/complain_header"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_customer_complain_header_below"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sf_regular"
                android:text="@string/text_complain_header"
                android:textColor="@color/black"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_et_all"
                android:orientation="vertical">
                <Spinner
                    android:id="@+id/sp_customer_complain_product_type"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:padding="4dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_customer_complain_serial_or_imei"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_et_all"
                android:fontFamily="@font/sf_regular"
                android:hint="@string/complain_item_serial_or_imei"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/et_customer_complain_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_et_all"
                android:fontFamily="@font/sf_regular"
                android:hint="@string/complain_item_manufacturing_year"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/et_customer_complain_contact"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_et_all"
                android:fontFamily="@font/sf_regular"
                android:hint="@string/complain_contact_number"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/et_customer_product_details"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_et_all"
                android:fontFamily="@font/sf_regular"
                android:hint="@string/complain_product_detail"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp"
                android:paddingRight="10dp" />
            <EditText
                android:id="@+id/et_customer_complain_message"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/custom_et_all"
                android:fontFamily="@font/sf_regular"
                android:hint="@string/complain_complain_detail"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp"
                android:paddingRight="10dp" />
            <Button
                android:id="@+id/btn_customer_complain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/sf_regular"
                android:text="@string/complain_button"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:layout_marginBottom="40dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>