<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".UserSignUp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_header_top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/logo" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_user_sign_in_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_bold"
        android:text="@string/sing_up"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/iv_user_login_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/image_default"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/custom_circle"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="-50dp"
                />
            <EditText
                android:id="@+id/et_user_sign_up_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_et_all"
                android:hint="@string/first_name"
                android:fontFamily="@font/sf_regular"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et_user_sign_up_last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_et_all"
                android:hint="@string/last_name"
                android:fontFamily="@font/sf_regular"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et_user_sign_up_contact_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_et_all"
                android:hint="@string/contact"
                android:fontFamily="@font/sf_regular"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et_user_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_et_all"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:fontFamily="@font/sf_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et_user_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_et_all"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:fontFamily="@font/sf_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/et_user_sign_up_cp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_et_all"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:fontFamily="@font/sf_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp"
                 />
            <Button
                android:id="@+id/btn_user_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/sing_up"
                android:fontFamily="@font/sf_regular"
                android:textAllCaps="false"
                android:textColor="#fff"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp">
                <TextView
                    android:id="@+id/tv_user_sign_up_login_label"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_member"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/sf_regular"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp" />
                <TextView
                    android:id="@+id/tv_user_sign_up_login"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_toEndOf="@+id/tv_user_sign_up_login_label"
                    android:fontFamily="@font/sf_regular"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/tv_user_sign_up_login_label" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>