<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgetPassword">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_header_top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/logo" />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_user_sign_in_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_fp_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_et_all"
                android:hint="@string/email"
                android:fontFamily="@font/sf_regular"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp"
                 />


            <EditText
                android:id="@+id/et_fp_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_et_all"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:fontFamily="@font/sf_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp"
                 />
            <EditText
                android:id="@+id/et_fp_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_et_all"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:fontFamily="@font/sf_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textSize="14sp"
                 />

            <Button
                android:id="@+id/btn_fp_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/reset_pass"
                android:fontFamily="@font/sf_regular"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:layout_marginBottom="80dp"
                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>