<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_user_active_sell_products"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <ImageView
            android:id="@+id/iv_user_active_sell_product_image"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:src="@drawable/image_default" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_active_sell_product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/sf_bold"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_user_active_sell_product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/sf_regular"
                android:text="@string/dummy_price"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_user_active_sell_product_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/sf_regular"
                android:text="@string/complain_dummy_message"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>